Bug 15299 - Spotlight doesn't work with latest macOS Ventura
Summary: Spotlight doesn't work with latest macOS Ventura
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: 4.17.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-02 10:12 UTC by Ralph Böhme
Modified: 2023-03-09 09:22 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.18, 4.17 and 4.16 cherry-picked from master (1.41 KB, patch)
2023-02-06 05:17 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2023-02-02 10:12:23 UTC
Have patch, need bugnumber.
Comment 1 Samba QA Contact 2023-02-02 21:16:05 UTC
This bug was referenced in samba master:

1dd0cd2f4e644ad43b0e7ee2aaae19799e859585
Comment 2 Ralph Böhme 2023-02-06 05:17:54 UTC
Created attachment 17747 [details]
Patch for 4.18, 4.17 and 4.16 cherry-picked from master
Comment 3 Jeremy Allison 2023-02-06 19:08:53 UTC
Re-assigning to Jule for inclusion in 4.18.rcNext, 4.17.next, 4.16.next.
Comment 4 Jule Anger 2023-02-10 09:03:56 UTC
Pushed to autobuild-v4-{18,17,16}-test.
Comment 5 Samba QA Contact 2023-02-10 10:44:03 UTC
This bug was referenced in samba v4-17-test:

79c06ede865b2a78688c91244eba513eba3598f1
Comment 6 Samba QA Contact 2023-02-10 11:47:11 UTC
This bug was referenced in samba v4-18-test:

8816c1b6e315f499afa66610a999ca82b38cb28d
Comment 7 Samba QA Contact 2023-02-10 12:16:03 UTC
This bug was referenced in samba v4-16-test:

2b1d412f552c7724dc2464793ad60e0108443436
Comment 8 Jule Anger 2023-02-10 12:32:53 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-02-15 15:18:47 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.0rc3):

8816c1b6e315f499afa66610a999ca82b38cb28d
Comment 10 Samba QA Contact 2023-02-16 16:38:21 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.9):

2b1d412f552c7724dc2464793ad60e0108443436
Comment 11 Samba QA Contact 2023-03-09 09:22:28 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.6):

79c06ede865b2a78688c91244eba513eba3598f1